# Tensor-Cuda-FFT-

./: .gitignore  ACHIEVEMENT_MODE.md  ALTERNATIVE_CUDA_SETUP.md  ARCHITECTURE.md  BENCHMARKS.md  BICAMERAL_ARCHITECTURE.md  CONTRIBUTING.md  CORRECTED_INFO.md  DUAL_HEAD_BREAKTHROUGH.md  FINAL_STATUS.md  FINAL_TEST_REPORT.md  FREQUENCY_DOMAIN_BREAKTHROUGH.md  FREQUENCY_NATIVE.md  GPU_COMPATIBILITY.md  INSTALL.md  LR_PHYSICS.md  OPTIMIZATION_GUIDE.md  PACKAGE_SUMMARY.md  PLATEAU_RULE.md  README.md  README_PYTORCH_MODE.md  STREAMING_IFFT_PLAN.md  TEST_RESULTS.md  TRAINING_CONFIG.md  benchmark_enhanced.py  bicameral_ckpt.pt.sha256  chunklm_ckpt.pt.sha256  chunklm_freq_native_ckpt.pt.sha256  dual_head_ckpt.pt.sha256  progressive_training.py  requirements.txt  sanity_check.py  sanity_check_linear.py  sanity_check_minimal.py  setup.py  test_frequency_native.py  train_tinystories.py
.github/: README.md
examples/: basic_usage.py  neural_network.py
experiments/: debug_fft_axis.py  fix_frequency_mixing.py  golden_test.py  progressive_training.py  retrain_fixed.py  sanity_check.py  sanity_check_linear.py  sanity_check_minimal.py  test_fft_mixing.py  test_identity_init.py  test_normal_init.py  test_our_loss.py  test_our_model.py  test_sentence.py  train_tinystories.py
fft-tensor/: __init__.py  tensor.py
fft_lm/: __init__.py  bicameral.py  chunk_head.py  ckpt_io.py  dual_head.py  frequency_native.py  phase_clock.py  segmentation_head.py  spectral_ssm.py  train_fixed_full.py
fft_tensor/: __init__.py  (+5 more)
fft_tensor/cuda/: CMakeLists.txt  kernels.cu  kernels.cuh  sparse_fft.cu
(+21 files in other folders)
